# dustchain

./: BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_NOTES.md  LICENSE  PATCH_FILES.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md
benches/: block_validation.rs  fee_calculation.rs  mempool_sorting.rs  storage_write.rs  tx_encoding.rs
crates/dust-cli/: Cargo.toml
crates/dust-cli/src/: main.rs  output.rs
crates/dust-cli/src/commands/: bench.rs  chain.rs  init.rs  inspect.rs  lab.rs  mempool.rs  mine.rs  mod.rs  node.rs  tx.rs  wallet.rs
crates/dust-core/: Cargo.toml
crates/dust-core/src/: account.rs  block.rs  chain.rs  error.rs  fees.rs  hash.rs  lib.rs  merkle.rs  state.rs  tx.rs  validate.rs
crates/dust-crypto/: Cargo.toml
crates/dust-crypto/src/: address.rs  error.rs  keys.rs  lib.rs  signature.rs
crates/dust-gui/: Cargo.toml
crates/dust-gui/src/: actions.rs  app.rs  components.rs  lib.rs  main.rs
crates/dust-lab/: Cargo.toml
crates/dust-lab/src/: fork.rs  invalid_block.rs  invalid_tx.rs  lib.rs  oversized_block.rs  replay.rs  report.rs  spam.rs
crates/dust-mempool/: Cargo.toml
crates/dust-mempool/src/: error.rs  lib.rs  policy.rs  pool.rs  priority.rs
crates/dust-node/: Cargo.toml
crates/dust-node/src/: config.rs  error.rs  gossip.rs  lib.rs  miner.rs  node.rs  p2p.rs  sync.rs  validator.rs
crates/dust-store/: Cargo.toml
crates/dust-store/src/: blocks.rs  db.rs  error.rs  lib.rs  metadata.rs  state.rs  txs.rs
crates/dust-tui/: Cargo.toml
crates/dust-tui/src/: app.rs  lib.rs  ui.rs
crates/dust-tui/src/screens/: blocks.rs  dashboard.rs  fees.rs  logs.rs  mempool.rs  mod.rs  peers.rs
crates/dust-wire/: Cargo.toml
crates/dust-wire/src/: decode.rs  encode.rs  error.rs  frame.rs  lib.rs  magic.rs  varint.rs
docs/: benchmarks.md  binary-format.md  fees.md  gui.md  networking.md  protocol.md  roadmap.md  storage.md  threat-model.md
examples/: gui-demo.sh  inspect-block-demo.sh  localnet-2-nodes.toml  localnet-4-nodes.toml  localnet-demo.sh  low-fee-demo.sh  spam-lab-demo.sh
src/: lib.rs
tests/: binary_roundtrip.rs  chain_validation.rs  fee_policy.rs  localnet_sync.rs  mempool_limits.rs  replay_protection.rs  storage_persistence.rs
