[package]
name = "dustchain"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dust-core.workspace = true
dust-mempool.workspace = true
dust-store.workspace = true
dust-wire.workspace = true

[dev-dependencies]
criterion.workspace = true

[workspace]
resolver = "2"
members = [
    "crates/dust-core",
    "crates/dust-crypto",
    "crates/dust-wire",
    "crates/dust-store",
    "crates/dust-mempool",
    "crates/dust-node",
    "crates/dust-tui",
    "crates/dust-lab",
    "crates/dust-cli",
]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.78"
authors = ["dustchain contributors"]
repository = "https://github.com/waiskinny1-max/dustchain"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
bytes = "1.7"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.12"
criterion = "0.5"
proptest = "1.5"

dust-core = { path = "crates/dust-core" }
dust-crypto = { path = "crates/dust-crypto" }
dust-wire = { path = "crates/dust-wire" }
dust-store = { path = "crates/dust-store" }
dust-mempool = { path = "crates/dust-mempool" }
dust-node = { path = "crates/dust-node" }
dust-tui = { path = "crates/dust-tui" }
dust-lab = { path = "crates/dust-lab" }
