[package]
name = "dust-cli"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "dust"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dust-core.workspace = true
dust-crypto.workspace = true
dust-wire.workspace = true
dust-store.workspace = true
dust-mempool.workspace = true
dust-node.workspace = true
dust-tui.workspace = true
dust-lab.workspace = true
dust-gui.workspace = true
tokio.workspace = true
