[package]
name = "dust-crypto"
version = "0.4.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
rand_core.workspace = true
thiserror.workspace = true
dust-core.workspace = true
