[package]
name = "dust-gui"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "dust-gui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dust-core.workspace = true
dust-crypto.workspace = true
dust-wire.workspace = true
dust-store.workspace = true
dust-lab.workspace = true
eframe.workspace = true
