[package]
name = "dust-node"
version = "1.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
dust-core.workspace = true
dust-store.workspace = true
hex.workspace = true
dust-wire.workspace = true
